# back-end/src/routes/pdf/pdf.validator.ts
@@ -1,14 +1,11 @@
-import { body } from 'express-validator'
+import { check } from 'express-validator'
 
 import { catchValidateError } from '../../middlewares'
 
 
 export const pdfValidator = {
     gen: [
-        body('batchName')
-            .exists(),
-        body('certificatedName')
-            .exists(),
+
 
         catchValidateError,
     ],
